--- a/src/index.html
+++ b/src/index.html
@@ -4,100 +4,99 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Open Weather API (Carl Serquina)</title>
   </head>
   <body>
     <div class="w-full overflow-hidden h-full">
-      <div class="flex flex-col items-center">
-        <h1 class="font-bold text-4xl">Open Weather API - Carl Serquina</h1>
+      <div
+        id="header"
+        class="flex flex-col items-center py-8 text-white font-bold shadow-2xl"
+      >
+        <div class="flex flex-col md:flex-row items-center justify-between">
+          <img
+            src="https://openweathermap.org/themes/openweathermap/assets/img/logo_white_cropped.png"
+            class="w-1/2 h-1/2 md:w-1/6 md:h-1/6"
+          />
+
+          <h1 class="font-bold text-xl md:my-0 my-6">
+            Open Weather API - Carl Serquina
+          </h1>
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-menu-2"
+            width="40"
+            height="40"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="#ffffff"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <line x1="4" y1="6" x2="20" y2="6" />
+            <line x1="4" y1="12" x2="20" y2="12" />
+            <line x1="4" y1="18" x2="20" y2="18" />
+          </svg>
+        </div>
+      </div>
+
+      <div class="flex flex-col items-center font-bold text-white">
+        <div class="p-10 m-6" id="instructions">
+          <p class="text-center">
+            Welcome to the One Call API (which is available for free tier in
+            Open Weather). Please enter the desired longitude and latitude to
+            get the desired outcome.
+          </p>
+          <p class="text-center">Made by yours truly, Carl.</p>
+        </div>
       </div>
 
       <div class="flex flex-col items-center p-16 text-black">
-        <div class="flex flex-col md:flex-row items-center">
+        <div class="flex flex-col md:flex-row items-center w-full">
           <input
-            class="md:w-1/2 mx-2 w-full px-2 py-4 border-2 border-black"
+            class="w-full mx-2 md:my-0 my-6 px-2 py-4 border-2 border-black"
             id="latitudeinput"
+            placeholder="Latitude (2 decimal places)"
           />
 
           <input
-            class="md:w-1/2 mx-2 w-full px-2 py-4 border-2 border-black"
+            class="w-full mx-2 md:my-0 my-6 px-2 py-4 border-2 border-black"
             id="longitudeinput"
+            placeholder="Longitude (2 decimal places)"
           />
         </div>
 
-        <div class="flex flex-col md:flex-row items-center">
+        <div class="flex flex-col md:flex-row items-center w-full my-6">
           <button
-            class="w-full px-2 py-2 bg-green-800 text-white"
+            class="w-full px-12 mx-6 md:my-0 my-6 py-2 text-white rounded-full"
             id="getWeather"
           >
             Get Weather
           </button>
+
+          <button
+            class="w-full px-12 mx-6 md:my-0 my-6 py-2 text-white rounded-full"
+            id="getLocation"
+          >
+            Get Location
+          </button>
         </div>
       </div>
 
-      <div class="flex flex-col items-center p-16 text-black"></div>
+      <div
+        class="location flex flex-col items-center font-bold text-4xl text-white p-16"
+        id="location"
+      ></div>
+
+      <div
+        class="weather grid grid-cols-1 md:grid-cols-3 md:grid-rows-1 grid-rows-3"
+      ></div>
+
+      <script src="script.js"></script>
     </div>
-
-    <script>
-      const api = {
-        init: () => {
-          document
-            .getElementById("getWeather")
-            .addEventListener("click", app.getWeather);
-          document
-            .getElementById("getLocation")
-            .addEventListener("click", app.getLocation);
-        },
-        getWeather: () => {
-          let lat = document.getElementById("latitudeinput").value;
-          let lon = document.getElementById("longitudeinput").value;
-          let apiKey = "0dbdfa99d6ff01aa7ca46db4934594e7";
-          let language = "en";
-          let units = "metric";
-          let apiUrl = `https://api.openweathermap.org/data/2.5/onecall?lat=${lat}&lon=${lon}&appid=${apiKey}&units=${units}&lang=${language}`;
-
-          //fetching area :-)
-
-          fetch(apiUrl)
-            .then((response) => {
-              if (!response.ok) {
-                throw new Error(response.statusText);
-              } else return response.json();
-            })
-            .then((data) => app.showWeather(data))
-            .catch(console.err);
-        },
-        getLocation: () => {
-          let options = {
-            enableHighAccuracy: true,
-            timeout: 5000,
-            maximumAge: 500000,
-          };
-
-          navigator.geolocation.getCurrentPosition(
-            app.success,
-            app.error,
-            options
-          );
-        },
-        success: () => {
-          document.getElementById("latitudeinput").value =
-            position.coords.latitude.toFixed(2);
-          document.getElementById("longitudeinput").value =
-            position.coords.longitude.toFixed(2);
-        },
-        error: () => {
-          console.error();
-        },
-        showWeather: (response) => {
-          console.log(response);
-
-          let row = document.querySelector("#weather");
-        },
-      };
-
-      api.init();
-    </script>
   </body>
 </html>
