--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Open Weather API (Carl Serquina)</title>
   </head>
   <body>
-    <div class="w-full overflow-hidden h-full">
+    <div class="w-full overflow-hidden h-full" id="body">
       <div
         id="header"
         class="flex flex-col items-center py-8 text-white font-bold shadow-2xl"
@@ -44,8 +44,12 @@
         </div>
       </div>
 
+      <div class="w-full pt-56 pb-8 px-20" id="hero">
+        <h1 class="font-bold text-5xl">Welcome!</h1>
+      </div>
+
       <div class="flex flex-col items-center font-bold text-white">
-        <div class="p-10 m-6" id="instructions">
+        <div class="p-10 m-6 rounded-full shadow-2xl" id="instructions">
           <p class="text-center">
             Welcome to the One Call API (which is available for free tier in
             Open Weather). Please enter the desired longitude and latitude to
@@ -82,7 +86,7 @@
             class="w-full px-12 mx-6 md:my-0 my-6 py-2 text-white rounded-full"
             id="getLocation"
           >
-            Get Location
+            Get TimeZone
           </button>
         </div>
       </div>
@@ -90,11 +94,193 @@
       <div
         class="location flex flex-col items-center font-bold text-4xl text-white p-16"
         id="location"
-      ></div>
+      >
+        Current Timezone:
+      </div>
 
       <div
         class="weather grid grid-cols-1 md:grid-cols-3 md:grid-rows-1 grid-rows-3"
       ></div>
+
+      <div class="w-full shadow-2xl p-10 mt-10" id="footer">
+        <div class="grid grid-cols-1 grid-rows-6 md:grid-cols-3 md:grid-rows-2">
+          <div class="p-4 m-6">
+            <h1 class="font-bold mb-6">Product Collections</h1>
+
+            <p>Current and Forecast APIs</p>
+            <p>Historical Weather Data</p>
+            <p>Weather Maps</p>
+            <p>Weather Dashboard</p>
+            <p>Widgets</p>
+          </div>
+
+          <div class="p-4 m-6">
+            <h1 class="font-bold mb-6">Subscription</h1>
+
+            <p>How to start</p>
+            <p>Pricing</p>
+            <p>Subscribe for free</p>
+            <p>FAQ</p>
+          </div>
+
+          <div class="p-4 m-6">
+            <h1 class="font-bold mb-6">About us</h1>
+
+            <p>
+              OpenWeather is a team of IT experts and data scientists that has
+              been practising deep weather data science since 2014. For each
+              point on the globe, OpenWeather provides historical, current and
+              forecasted weather data via light-speed APIs. Headquarters in
+              London, UK.
+            </p>
+          </div>
+
+          <div class="p-4 m-6">
+            <h1 class="font-bold mb-6">Technologies</h1>
+
+            <p>Our technology</p>
+            <p>Accuracy and quality of weather data</p>
+            <p>Connect your weather station</p>
+          </div>
+
+          <div class="p-4 m-6">
+            <h1 class="font-bold mb-6">Terms & Conditions</h1>
+
+            <p>Terms and conditions of sale</p>
+            <p>Privacy Policy</p>
+            <p>Website terms and conditions</p>
+          </div>
+
+          <div class="p-4 m-6">
+            <h1 class="font-bold mb-6 invisible">empty</h1>
+
+            <p>Blog</p>
+            <p>Ask a question</p>
+            <p>info@openweathermap.org</p>
+          </div>
+        </div>
+
+        <div
+          class="flex flex-col md:flex-row justify-between w-full items-center"
+        >
+          <div class="text-left md:my-0 my-6">
+            © 2012 — 2021 OpenWeather ® All rights reserved
+          </div>
+
+          <div class="flex flex-row items-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-facebook md:mr-6 mr-3"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#000000"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
+              />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-twitter md:mr-6 mr-3"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#000000"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"
+              />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-linkedin md:mr-6 mr-3"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#000000"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <rect x="4" y="4" width="16" height="16" rx="2" />
+              <line x1="8" y1="11" x2="8" y2="16" />
+              <line x1="8" y1="8" x2="8" y2="8.01" />
+              <line x1="12" y1="16" x2="12" y2="11" />
+              <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-medium md:mr-6 mr-3"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#000000"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <rect x="4" y="4" width="16" height="16" rx="2" />
+              <path d="M8 9h1l3 3l3 -3h1" />
+              <line x1="8" y1="15" x2="10" y2="15" />
+              <line x1="14" y1="15" x2="16" y2="15" />
+              <line x1="9" y1="9" x2="9" y2="15" />
+              <line x1="15" y1="9" x2="15" y2="15" />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-telegram md:mr-6 mr-3"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#000000"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M15 10l-4 4l6 6l4 -16l-18 7l4 2l2 6l3 -4" />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-github md:mr-6 mr-3"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#000000"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
 
       <script src="script.js"></script>
     </div>
